# OpenMS

./: .travis.yml  CMakeLists.txt
cmake/: add_library_macros.cmake  compiler_flags.cmake
cmake/modules/: CppcheckTargets.cmake  Findcppcheck.cmake
doc/: CMakeLists.txt
doc/code_examples/: CMakeLists.txt  Tutorial_EmpiricalFormula.cpp  Tutorial_FeatureFinder.cpp  Tutorial_FeatureMap.cpp  Tutorial_Labeled.cpp  Tutorial_MapAlignment.cpp  Tutorial_MetaInfo.cpp  Tutorial_RangeManager.cpp  Tutorial_Unlabeled.cpp
pyOpenMS/: create_cpp_extension.py  pyopenms.cmake
src/: CMakeLists.txt
src/openms/: CMakeLists.txt
src/openms_gui/: CMakeLists.txt
src/openswathalgo/: CMakeLists.txt
src/pyOpenMS/: CMakeLists.txt  create_cpp_extension.py
src/superhirn/: CMakeLists.txt
src/tests/: CMakeLists.txt
src/tests/class_tests/: CMakeLists.txt
src/tests/class_tests/openms/: CMakeLists.txt  executables.cmake
src/tests/class_tests/openms/data/: TOPPBase_value_restrictions_common.ini  TOPPBase_value_restrictions_common_tool.ini  TOPPBase_value_restrictions_instance.ini
src/tests/class_tests/openms/source/: AScore_test.cpp  AccurateMassSearchEngine_test.cpp  BaseFeature_test.cpp  CVTermList_test.cpp  ChromatogramSettings_test.cpp  CompNovoIdentificationCID_test.cpp  CompNovoIdentification_test.cpp  CompNovoIonScoringCID_test.cpp  CompNovoIonScoring_test.cpp  ConfidenceScoring_test.cpp  ConsensusFeature_test.cpp  ConsensusID_test.cpp  ConsensusMap_test.cpp  ConversionHelper_test.cpp  DetectabilitySimulation_test.cpp  DigestSimulation_test.cpp  DocumentIDTagger_test.cpp  EDTAFile_test.cpp  ExperimentalSettings_test.cpp  FeaFiModule_test.cpp  FeatureDeconvolution_test.cpp  FeatureFinderAlgorithmIsotopeWavelet_test.cpp  FeatureFinderAlgorithmMRM_test.cpp  FeatureFinderAlgorithmPicked_test.cpp  FeatureFinderAlgorithmSimple_test.cpp  FeatureFinderAlgorithmSimplest_test.cpp  FeatureFinderAlgorithm_test.cpp  FeatureFinder_test.cpp  FeatureFindingMetabo_test.cpp  FeatureGroupingAlgorithmLabeled_test.cpp  FeatureGroupingAlgorithmQT_test.cpp  FeatureGroupingAlgorithmUnlabeled_test.cpp  FeatureGroupingAlgorithm_test.cpp  FeatureHandle_test.cpp  FeatureMap_test.cpp  FeatureXMLFile_test.cpp  FileHandler_test.cpp  GridFeature_test.cpp  ICPLLabeler_test.cpp  IDMapper_test.cpp  (+64 more)
src/tests/class_tests/openms_gui/: CMakeLists.txt
src/tests/class_tests/openswathalgo/: CMakeLists.txt
src/tests/class_tests/superhirn/: CMakeLists.txt
src/tests/class_tests/superhirn/source/: FeatureFinderAlgorithmSHSuperhirnms_peak_test.cpp  FeatureFinderAlgorithmSH_test.cpp
src/tests/coding/: CMakeLists.txt
src/tests/topp/: CMakeLists.txt
src/topp/: AdditiveSeries.cpp  CMakeLists.txt  ConsensusID.cpp  Decharger.cpp  FalseDiscoveryRate.cpp  FeatureFinderCentroided.cpp  FeatureFinderIdentification.cpp  FeatureFinderIsotopeWavelet.cpp  FeatureFinderMRM.cpp  FeatureFinderMetabo.cpp  FeatureLinkerBase.cpp  FeatureLinkerUnlabeled.cpp  FileConverter.cpp  FileFilter.cpp  FileInfo.cpp  FileMerger.cpp  GenericWrapper.cpp  IDConflictResolver.cpp  IDFilter.cpp  IDMapper.cpp  IDMerger.cpp  IDRTCalibration.cpp  InclusionExclusionListCreator.cpp  InternalCalibration.cpp  MapAlignerIdentification.cpp  MapAlignerPoseClustering.cpp  MapRTTransformer.cpp  MapStatistics.cpp  MassTraceExtractor.cpp  OpenSwathAnalyzer.cpp  OpenSwathConfidenceScoring.cpp  OpenSwathFeatureXMLToTSV.cpp  OpenSwathRTNormalizer.cpp  PeptideIndexer.cpp  PrecursorIonSelector.cpp  PrecursorMassCorrector.cpp  ProteinQuantifier.cpp  SeedListGenerator.cpp  TextExporter.cpp
src/utils/: AccurateMassSearch.cpp  CMakeLists.txt  DecoyDatabase.cpp  ERPairFinder.cpp  FFEval.cpp  FeatureFinderSuperHirn.cpp  IDEvaluator.cpp  IDSplitter.cpp  ImageCreator.cpp  LabeledEval.cpp  MRMPairFinder.cpp  MRMTransitionGroupPicker.cpp  MassCalculator.cpp  MetaboliteSpectralMatcher.cpp  (+5 more)
tools/: lnx-cibuild.before.sh  lnx-cibuild.cmake  lnx-cibuild.sh
(+379 files in other folders)
